[package]
name = "wasi-chrono"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "^0.4", features = ["wasmbind"] }
uuid = { version = "^0.8", features = ["wasm-bindgen", "serde", "v4"  ] }
#wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

